Add texelFetchOffset walkaround for Intel Mac

Rewrite from "texelFetchOffset(sampler, position, lod, offset)" to
"texelFetch(sampler, position+offset, lod)", as Intel Mac drivers
mistakenly consider the parameter "position" of nagative vaule as
invalid even if the sum of "position" and "offset" is in range.

BUG=642605
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2300573002
Cr-Commit-Position: refs/heads/master@{#416172}

Former-commit-id: 0b685fdd155127fe973821416319cfcead1b10a8